--- a/NodeJS/package.json
+++ b/NodeJS/package.json
@@ -16,5 +16,14 @@
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mateenNawaz86/NodeJS.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/mateenNawaz86/NodeJS/issues"
+  },
+  "homepage": "https://github.com/mateenNawaz86/NodeJS#readme"
 }
