--- a/ExpressJS/package.json
+++ b/ExpressJS/package.json
@@ -9,7 +9,11 @@
   "keywords": [],
   "author": "Mateen Nawaz",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/node": "^7.20.0",
+    "@babel/preset-env": "^7.19.4",
     "express": "^4.18.2"
   }
 }
