--- a/ExpressJS/package.json
+++ b/ExpressJS/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.19.6",
     "@babel/node": "^7.20.0",
     "@babel/preset-env": "^7.19.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "hbs": "^4.2.0"
   }
 }
