--- a/ExpressJS/package.json
+++ b/ExpressJS/package.json
@@ -15,6 +15,7 @@
     "@babel/node": "^7.20.0",
     "@babel/preset-env": "^7.19.4",
     "express": "^4.18.2",
-    "hbs": "^4.2.0"
+    "hbs": "^4.2.0",
+    "requests": "^0.3.0"
   }
 }
