refactor some code

--- a/Nodejs_Udemy_course/node_basic/package.json
+++ b/Nodejs_Udemy_course/node_basic/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "name": "node_basic",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
