--- a/Nodejs_Udemy_course/express/package.json
+++ b/Nodejs_Udemy_course/express/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "body-parser": "^1.20.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "express-handlebars": "^7.0.1",
+    "nodemon": "^2.0.20",
+    "pug": "^3.0.2"
   }
 }
